refactor: 자바 버전 다운그레이드 시 남아있던 .toList()를 (Collectors.toList())로 변경