@@ -63,6 +63,6 @@ public class FcmService {
     public List<String> getFcmTokens(String uniqueId) {
         return fcmTokenRepository.findByUser_UniqueId(uniqueId).stream()
                 .map(FcmToken::getToken)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
