@@ -28,7 +28,7 @@ public class UserResponseDto {
                 .mbti(user.getMbti())
                 .interestItemCategory(user.getInterestItemCategory().stream()
                         .map(ItemCategory::getKoreanName)
-                        .toList())
+                        .collect(Collectors.toList()))
                 .introduction(user.getIntroduction())
                 .build();
     }
